--- a/source/dialogs/curve-properties/curve-properties-modal.html
+++ b/source/dialogs/curve-properties/curve-properties-modal.html
@@ -136,7 +136,7 @@
                                                    class="form-control wi-form-control"
                                                    ng-model="wiModal.symbolOptions.symbolStyle.symbolSize"
                                                    ng-change="wiModal.changeOther();"
-                                                   disabled="true">
+                                                   disabled="false">
                                         </div>
                                     </div>
                                     <div class="form-group">
