--- a/source/dialogs/symbol-style/symbol-style-modal.html
+++ b/source/dialogs/symbol-style/symbol-style-modal.html
@@ -66,6 +66,7 @@
                                                 <input kendo-color-picker k-palette="'websafe'"
                                                        class="form-control wi-form-control"
                                                        ng-model="wiModal.options.symbolStyle.symbolStrokeStyle"/>
+                                                       {{wiModal.options.symbolStyle.symbolStrokeStyle}}
                                             </div>
                                         </div>
                                     </div>
